// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> should match snapshot for default Box 1`] = `
<div
  class="root variant--default borderColour--gray-300 strokeWidth--1 distance--0"
/>
`;

exports[`<Box /> should match snapshot for distance 1 with rounder corners 1`] = `
<div
  class="root variant--four borderColour--gray-300 strokeWidth--1 distance--0"
/>
`;

exports[`<Box /> should match snapshot for distance 2 1`] = `
<div
  class="root variant--default borderColour--gray-300 strokeWidth--1 distance--2"
/>
`;

exports[`<Box /> should match snapshot for distance 3 1`] = `
<div
  class="root variant--default borderColour--gray-300 strokeWidth--1 distance--3"
/>
`;
